--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,9 @@
     <link rel="stylesheet" href="button.css">
   </head>
   <body>
-    <button id="injectAttack">Inject Attack</button>
-    <!--<script src="jquery-3.6.0.slim.min.js"></script>
-    <script src="popup.js"></script>-->
+    <input id="checkwildmagic"></input>
+    <button id="submitwildmagic">Check surge result</button>
+    <div id="surgeResult"></div>
+    <script src="popup.js"></script>
   </body>
 </html>
